Working CRUD for Schedules, Speakers
 - Use more appropriate favicon
 - Don't update DeletedAt fields on record update
 - Swagger updates
 - types/requests: Moved request validation to separate file
 - New handlers:
  - ApiPostSchedules
  - ApiPutSchedules
  - ApiDeleteSchedules
  - ApiGetSpeakers
  - ApiPostSpeakers
  - ApiPutSpeakers
  - ApiDeleteSpeakers
 - Support for drag-and-drop sorting for speakers: vue-draggable
 - New date picker: vue-tailwind-datepicker
 - Cleaned up FooterBar
 - Moved modals to their own components: ScheduleModal, SpeakerModal
 - utils/api.ts: New method to parse and set request params
 - New layout for LoginView
